--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <div id="loginscreen" layout vertical center-center fit
      class="{{ {show: !isAuthenticated} | tokenList }}">
   <google-signin width="wide" height="tall"
-      clientId="229000986068-hld1d9ovioamaaur218vg3jg5dgvf2a2.apps.googleusercontent.com"
+      clientId="601913270428-3n8khr8dhv7b8l33pe78qqg5mj03jmjg.apps.googleusercontent.com
+"
       scopes="profile email https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/gmail.modify"
       on-google-signin-success="{{onSigninSuccess}}"
       on-google-signin-failure="{{onSigninFailure}}"></google-signin>
